fix(#11): wrap contacts

--- a/app/contacts/contacts.module.css
+++ b/app/contacts/contacts.module.css
@@ -27,6 +27,13 @@
 }
 
 
+@media (width >= 1920px) {
+  .contacts_item__definition_address {
+    max-width: 760px;
+  }
+}
+
+
 @media (width < 1440px) {
   .contacts {
     padding-inline: 40px;
